--- a/app/src/main/res/layout/activity_provider_register.xml
+++ b/app/src/main/res/layout/activity_provider_register.xml
@@ -109,7 +109,7 @@
                     android:drawableLeft="@drawable/baseline_add_business_24"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:hint="Company Name"
+                    android:hint="Restaurant Name"
                     android:paddingTop="30dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
