--- a/app/src/main/res/layout/activity_dummy_provider_register.xml
+++ b/app/src/main/res/layout/activity_dummy_provider_register.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DummyProviderRegisterActivity">
+    tools:context=".ProviderRegister">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
