--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,14 +26,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Welcome to"
                 android:gravity="center"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
@@ -43,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:text="Feed the Need"
                 android:gravity="center"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="20dp"
@@ -72,7 +73,7 @@
                 android:id="@+id/text_input_layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp">
@@ -119,31 +120,31 @@
 
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/menu_drop"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/select"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="25dp"
-                android:background="@drawable/splash_button"
-                android:outlineSpotShadowColor="@color/green"
-                app:hintTextColor="@color/green"
-                android:textColorHint="@color/green"
-                app:boxStrokeColor="@color/green">
+            <!--            <com.google.android.material.textfield.TextInputLayout-->
+            <!--                android:id="@+id/menu_drop"-->
+            <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:hint="@string/select"-->
+            <!--                android:layout_marginLeft="20dp"-->
+            <!--                android:layout_marginRight="20dp"-->
+            <!--                android:layout_marginBottom="25dp"-->
+            <!--                android:background="@drawable/splash_button"-->
+            <!--                android:outlineSpotShadowColor="@color/green"-->
+            <!--                app:hintTextColor="@color/green"-->
+            <!--                android:textColorHint="@color/green"-->
+            <!--                app:boxStrokeColor="@color/green">-->
 
-                <AutoCompleteTextView
-                    android:id="@+id/drop_items"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:inputType="none"
-                    android:text="Choose your module"
-                    />
+            <!--                <AutoCompleteTextView-->
+            <!--                    android:id="@+id/drop_items"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_weight="1"-->
+            <!--                    android:inputType="none"-->
+            <!--                    android:text="Choose your module"-->
+            <!--                    />-->
 
-            </com.google.android.material.textfield.TextInputLayout>
+            <!--            </com.google.android.material.textfield.TextInputLayout>-->
 
 
             <com.google.android.material.button.MaterialButton
@@ -152,7 +153,8 @@
                 android:text="Login"
                 android:textColor="@color/white"
                 android:padding="15dp"
-                android:layout_margin="40dp"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="20dp"
                 android:textSize="17dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:backgroundTint="@color/green"/>
@@ -191,12 +193,6 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"/>
 
-
-
     </LinearLayout>
-
-
-
-
 
 </RelativeLayout>
