--- a/app/src/main/res/layout/activity_provider_register.xml
+++ b/app/src/main/res/layout/activity_provider_register.xml
@@ -252,6 +252,7 @@
                     android:textAlignment="center" />
 
                 <TextView
+                    android:id="@+id/tvLoginNow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
